--- a/WebApplication2/Views/Shared/_NotificationPartial.cshtml
+++ b/WebApplication2/Views/Shared/_NotificationPartial.cshtml
@@ -29,6 +29,23 @@
 else if (TempData["Failed"] != null)
 {
 <script type="text/javascript">
+        toastr.options = {
+            "closeButton": false,
+            "debug": false,
+            "newestOnTop": false,
+            "progressBar": false,
+            "positionClass": "toast-top-center",
+            "preventDuplicates": false,
+            "onclick": null,
+            "showDuration": "300",
+            "hideDuration": "1000",
+            "timeOut": "5000",
+            "extendedTimeOut": "1000",
+            "showEasing": "swing",
+            "hideEasing": "linear",
+            "showMethod": "fadeIn",
+            "hideMethod": "fadeOut"
+        }
     toastr.error('@TempData["Failed"]')
 </script>
 }
