--- a/WebApplication2/Views/Review/AddReview.cshtml
+++ b/WebApplication2/Views/Review/AddReview.cshtml
@@ -120,6 +120,8 @@
             <div class="contact-form">
                 <form id="contact" method="post" asp-controller="review" asp-action="addreview" >
                     <input hidden  asp-for="CourseId" />
+                    <input hidden  asp-for="StudentId" />
+                    
                     <div class="row">
                         <div class="col-lg-12">
                             <div class=" align-content-center" style="margin:15px;">
