--- a/WebApplication2/Views/Shared/_ReviewPartial.cshtml
+++ b/WebApplication2/Views/Shared/_ReviewPartial.cshtml
@@ -74,10 +74,14 @@
                                                     aria-expanded="false">
                                                 <i class="fa fa-ellipsis-v"></i>
                                             </button>
-                                            <div class="dropdown-menu dropdown-menu-right"
-                                                 aria-labelledby="dropdownMenuButton1">
-                                                <a class="dropdown-item" asp-controller="report" asp-action="addreport" asp-route-Id="@items.ReviewId">Report</a>
-                                            </div>
+                                            @if (!User.IsInRole("Instructor"))
+                                            {
+                                                <div class="dropdown-menu dropdown-menu-right"
+                                                     aria-labelledby="dropdownMenuButton1">
+                                                    <a class="dropdown-item" asp-controller="report" asp-action="addreport" asp-route-Id="@items.ReviewId">Report</a>
+                                                </div>
+                                            }
+                                           
                                         </div>
                                     </div>
 
