--- a/WebApplication2/Views/Account/StudentRegister/Step1.cshtml
+++ b/WebApplication2/Views/Account/StudentRegister/Step1.cshtml
@@ -184,7 +184,7 @@
                             <button type="submit" class="btn btn-next" style="margin-left:auto;">Next ></button>
                         </div>
                         <div class="form-text-help text-center">
-                            Stuck on the form? <a href="#">Let's call you!</a>
+                              Already hava account <a asp-action="login" asp-controller="account">Login</a>
                         </div>
                     </form>
                 </div>
