--- a/WebApplication2/Areas/Admin/Views/Homee/Course.cshtml
+++ b/WebApplication2/Areas/Admin/Views/Homee/Course.cshtml
@@ -1,4 +1,5 @@
-﻿@model WebApplication2.PaginatedListNew<Course>
+﻿@using System.Security.Claims
+@model WebApplication2.PaginatedListNew<Course>
 
 @{
     Layout = "_aAdminLayout";
@@ -16,7 +17,7 @@
                 <div class="text-end upgrade-btn">
                     @*  <a href="https://www.wrappixel.com/templates/xtremeadmin/" class="btn btn-primary text-white"
                     target="_blank">Upgrade to Pro</a> *@
-                    <a href="@Url.Action("AddCourse", "Course",new{area =""})" role="button" class="btn btn-primary float-right"
+                    <a asp-action="AddCourse" asp-controller="course" asp-area="" asp-route-id="@User.FindFirstValue( System.Security.Claims.ClaimTypes.NameIdentifier)" role="button" class="btn btn-primary float-right"
                        style="color: #fff;
                                     background-color: #007bff;
                                     border-color: #007bff;
