--- a/WebApplication2/Areas/Admin/Views/Homee/Instructor.cshtml
+++ b/WebApplication2/Areas/Admin/Views/Homee/Instructor.cshtml
@@ -72,16 +72,16 @@
     <nav aria-label="Page navigation">
         <ul class="pagination">
             <li class="page-item @(Model.HasPreviousPage ? "" : "disabled")">
-                <a class="page-link" asp-action="course" asp-route-pageNumber="@(Model.PageIndex - 1)"> < Previous</a>
+                <a class="page-link" asp-action="instructor" asp-route-pageNumber="@(Model.PageIndex - 1)"> < Previous</a>
             </li>
             @for (int i = 1; i <= Model.TotalPages; i++)
             {
                 <li class="page-item @(i == Model.PageIndex ? "active" : "")">
-                    <a class="page-link" asp-action="course" asp-route-pageNumber="@i">@i</a>
+                    <a class="page-link" asp-action="instructor" asp-route-pageNumber="@i">@i</a>
                 </li>
             }
             <li class="page-item @(Model.HasNextPage ? "" : "disabled")">
-                <a class="page-link" asp-action="course" asp-route-pageNumber="@(Model.PageIndex + 1)">Next > </a>
+                <a class="page-link" asp-action="instructor" asp-route-pageNumber="@(Model.PageIndex + 1)">Next > </a>
             </li>
         </ul>
     </nav>
