adding student pages to admin,adding check of username to both instructor and student and adding username to review in details page

--- a/WebApplication2/Areas/Admin/Views/AdminReport/ReviewReports.cshtml
+++ b/WebApplication2/Areas/Admin/Views/AdminReport/ReviewReports.cshtml
@@ -67,7 +67,7 @@
                 @foreach (var review in Model)
                 {
                     <tr>
-                        <td>@review.Student</td>
+                        <td>@review.Student.StudentNavigation.UserName</td>
                         <td>
                             <ul class="stars" style="color:red">
 @*                                 @if (review.Rate == 5)
