--- a/WebApplication2/Views/Account/Login.cshtml
+++ b/WebApplication2/Views/Account/Login.cshtml
@@ -86,7 +86,7 @@
                             <hr class="mt-5 mb-4 border-secondary-subtle">
                             <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
 
-                                <p> Don't have account <a class="link-secondary btn btn-light" asp-controller="account" asp-action="StudentRegister">Create an account</a></p>
+                                <p> Don't have account <a class="link-secondary btn btn-light" asp-controller="StudentAccount" asp-action="step1">Create an account</a></p>
 
                             </div>
                         </div>
