--- a/WebApplication2/Views/Shared/_ReviewPartial.cshtml
+++ b/WebApplication2/Views/Shared/_ReviewPartial.cshtml
@@ -30,7 +30,7 @@
                                     <div class="d-flex justify-content-between">
                                         <div class="d-flex">
                                             <div class="user-info">
-                                                <strong>@items.Student</strong>
+                                                <strong>@items.Student.StudentNavigation.UserName</strong>
                                                 <span class="text-muted small">@items.GetFormattedDate(items.RatingDate) </span>
                                                 <ul class="stars">
                                                     @switch (items.Rate)
@@ -105,23 +105,24 @@
                 </div>
             </div>
         </div>
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                <li class="page-item @(Model.HasPreviousPage ? "" : "disabled")">
+                    <a class="page-link" asp-action="details" asp-route-pageNumber="@(Model.PageIndex - 1)">Previous</a>
+                </li>
+                @for (int i = 1; i <= Model.TotalPages; i++)
+                {
+                    <li class="page-item @(i == Model.PageIndex ? "active" : "")">
+                        <a class="page-link" asp-action="details" asp-route-pageNumber="@i">@i</a>
+                    </li>
+                }
+                <li class="page-item @(Model.HasNextPage ? "" : "disabled")">
+                    <a class="page-link" asp-action="details" asp-route-pageNumber="@(Model.PageIndex + 1)">Next</a>
+                </li>
+            </ul>
+        </nav>
     </div>
 </div>
 
 
-<nav aria-label="Page navigation">
-    <ul class="pagination">
-        <li class="page-item @(Model.HasPreviousPage ? "" : "disabled")">
-            <a class="page-link" asp-action="details" asp-route-pageNumber="@(Model.PageIndex - 1)">Previous</a>
-        </li>
-        @for (int i = 1; i <= Model.TotalPages; i++)
-        {
-            <li class="page-item @(i == Model.PageIndex ? "active" : "")">
-                <a class="page-link" asp-action="details" asp-route-pageNumber="@i">@i</a>
-            </li>
-        }
-        <li class="page-item @(Model.HasNextPage ? "" : "disabled")">
-            <a class="page-link" asp-action="details" asp-route-pageNumber="@(Model.PageIndex + 1)">Next</a>
-        </li>
-    </ul>
-</nav>
+
