adding student reviews to gis profile

--- a/WebApplication2/Areas/Admin/Views/Shared/_aAdminLayout.cshtml
+++ b/WebApplication2/Areas/Admin/Views/Shared/_aAdminLayout.cshtml
@@ -272,11 +272,10 @@
                                  class="rounded-circle" width="9" style="width:70px;height:50px; margin-right:10px;" />
                         </div>
                         <div class="user-content hide-menu m-l-10">
-
-                                <h5 class="m-b-0 user-name font-medium text-dark">
-                                    Osama Abdullah 
-                                </h5>
-                                <span class="op-5 user-email text-muted">Hala@gmail.com</span>
+                            <h5 class="m-b-0 user-name font-medium text-dark">
+                                @ViewBag.UserName
+                            </h5>
+                            <span class="op-5 user-email text-muted">@ViewBag.Email</span>
                         </div>
                     </div>  
                     <div class="filter-section">
