--- a/WebApplication2/Views/Shared/_StudentLayout.cshtml
+++ b/WebApplication2/Views/Shared/_StudentLayout.cshtml
@@ -129,7 +129,7 @@
                             <a asp-controller="account" asp-action="Logout" class="nav-link">Signout</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="student" asp-action="Profile" asp-route-id="@User.FindFirstValue( System.Security.Claims.ClaimTypes.NameIdentifier)">Profile</a>
+                            <a class="nav-link" asp-controller="student" asp-action="Profile" >Profile</a>
                         </li>
                     </ul>
                 </div>
