--- a/WebApplication2/Views/Shared/_ReviewPartial.cshtml
+++ b/WebApplication2/Views/Shared/_ReviewPartial.cshtml
@@ -79,6 +79,12 @@
                                                 <div class="dropdown-menu dropdown-menu-right"
                                                      aria-labelledby="dropdownMenuButton1">
                                                     <a class="dropdown-item" asp-controller="report" asp-action="addreport" asp-route-Id="@items.ReviewId">Report</a>
+                                               @*      @if (User.IsInRole("Student"))
+                                                    {
+                                                        <a class="dropdown-item" asp-controller="review" asp-action="editreview" asp-route-Id="@items.ReviewId">Edit</a>
+                                                        <a role="button" class="dropdown-item" onclick="showModal()">Delete </a>
+                                                    } *@
+
                                                 </div>
                                             }
                                            
